@@ -34,11 +34,122 @@ pixrgb_list([A|Pixels]):- pixrgb-d(_,_,_,_,_,_,A), pixrgb_list(Pixels).
 
 % Funciones principales
 
+% ---------------------------------- 2. Constructor Image -----------------------------------------------
+
 image(Width, Height, Pixels, [Width, Height, Pixels]).
 
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 3. IsBitmap? ----------------------------------------------------
 
 imageIsBitmap([Width,Height,Pixels]):- pixbit_list(Pixels).
 
-imageIsPixmap([Width,Height,Pixels]):- pixbit_list(Pixels).
+% -------------------------------------------------------------------------------------------------------
 
-imageIsHexmap([Width,Height,Pixels]):- pixbit_list(Pixels).
+
+% ------------------------------------- 4. IsPixmap? ----------------------------------------------------
+
+imageIsPixmap([Width,Height,Pixels]):- pixrgb_list(Pixels).
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 5. IsHexmap? ----------------------------------------------------
+
+imageIsHexmap([Width,Height,Pixels]):- pixhex_list(Pixels).
+
+% -------------------------------------------------------------------------------------------------------
+
+% ---------------------------------- 6. imageIsCompressed -----------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 7. flipH --------------------------------------------------------
+
+imageFlipH([Width,Height,[]], [Width,Heigh,[]]).
+imageFlipH([Width,Height,[[X,Y,Color,Depth]|Pixels]],[Width,Height,[[NewX,Y,Color,Depth]|P1]]):- 
+NewX is Width-1-X,imageFlipH([Width,Height,Pixels],[Width, Heigh, P1]).
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 8. flipV --------------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ----------------------------------------- 9. crop -----------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 10. imageRGBToHex -----------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------ 11. imageToHistogram ---------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 12. rotate90 ----------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------ 13. Compress -----------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 14. changePixel -------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 15. invertColorRGB ----------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 16. image->string------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 17. depthLayers--------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
+
+% ------------------------------------- 18. decompress --------------------------------------------------
+
+
+
+% -------------------------------------------------------------------------------------------------------
+
